@@ -97,6 +97,8 @@ type
     function GetIEvents: IEvents; virtual; abstract;
     procedure ProcessEventCounts;
   public
+    const EPB_version1 = 1;
+  public
     constructor Create(DBAttachment: IAttachment; aMonitor: IActivityMonitor; Events: TStrings);
     destructor Destroy; override;
 
@@ -120,41 +122,122 @@ const
 
 { TFBEvents }
 
+(*  CreateEventBlock based on
+SLONG API_ROUTINE_VARARG isc_event_block(UCHAR** event_buffer,
+  UCHAR** result_buffer,
+  USHORT count, ...)
+{
+/**************************************
+ *
+ *      i s c _ e v e n t _ b l o c k
+ *
+ **************************************
+ *
+ * Functional description
+ *      Create an initialized event parameter block from a
+ *      variable number of input arguments.
+ *      Return the size of the block.
+ *
+ *	Return 0 if any error occurs.
+ *
+ **************************************/
+	va_list ptr;
+
+	va_start(ptr, count);
+
+	// calculate length of event parameter block, setting initial length to include version
+	// and counts for each argument
+
+	SLONG length = 1;
+	USHORT i = count;
+	while (i--)
+	{
+		const char* q = va_arg(ptr, SCHAR * );
+		length += static_cast<SLONG>(strlen(q)) + 5;
+	}
+	va_end(ptr);
+
+	UCHAR* p = *event_buffer = (UCHAR * ) gds__alloc((SLONG) length);
+	// FREE: apparently never freed
+	if (!*event_buffer)			// NOMEM:
+		return 0;
+	if ((*result_buffer = (UCHAR * ) gds__alloc((SLONG) length)) == NULL)
+	{
+		// NOMEM:
+		// FREE: apparently never freed
+		gds__free(*event_buffer);
+		*event_buffer = NULL;
+		return 0;
+	}
+
+	// initialize the block with event names and counts
+
+	*p++ = EPB_version1;
+
+	va_start(ptr, count);
+
+	i = count;
+	while (i--)
+	{
+		const char* q = va_arg(ptr, SCHAR * );
+
+		// Strip the blanks from the ends
+		const char* end = q + strlen(q);
+		while (--end >= q && *end == ' ')
+			;
+		*p++ = end - q + 1;
+		while (q <= end)
+			*p++ = *q++;
+		*p++ = 0;
+		*p++ = 0;
+		*p++ = 0;
+		*p++ = 0;
+	}
+	va_end(ptr);
+
+	return static_cast<SLONG>(p - *event_buffer);
+}
+*)
+
 procedure TFBEvents.CreateEventBlock;
-var
-  i: integer;
-  EventNames: array of PAnsiChar;
-  EventName: AnsiString;
+var i: integer;
+    P: PByte;
+    S: AnsiString;
 begin
+  {calculate length of event parameter block, setting initial length to include version
+   and counts for each argument}
+
+  FEventBufferLen := 1;
+  for i := 0 to FEvents.Count - 1 do
+    FEventBufferLen := FEventBufferLen + length(FEvents[i]) + 5;
+
   with FFirebirdClientAPI do
   begin
-    if FEventBuffer <> nil then
-      isc_free( FEventBuffer);
-    FEventBuffer := nil;
-    if FResultBuffer <> nil then
-      isc_free( FResultBuffer);
-    FResultBuffer := nil;
+    IBAlloc(FEventBuffer,0,FEventBufferLen);
+    if FEventBuffer = nil then Exit;
+    FillByte(FEventBuffer^,FEventBufferLen,0);
+    IBAlloc(FResultBuffer,0,FEventBufferLen);
+    if FResultBuffer = nil then
+    begin
+      FreeMem(FEventBuffer);
+      Exit;
+    end;
 
-    setlength(EventNames,MaxEvents);
-    try
-      for i := 0 to FEvents.Count-1 do
-      begin
-        EventName := FEvents[i];
-        EventNames[i] := PAnsiChar(EventName);
-      end;
-
-      FEventBufferlen := isc_event_block(@FEventBuffer,@FResultBuffer,
-                          FEvents.Count,
-                          EventNames[0],EventNames[1],EventNames[2],
-                          EventNames[3],EventNames[4],EventNames[5],
-                          EventNames[6],EventNames[7],EventNames[8],
-                          EventNames[9],EventNames[10],EventNames[11],
-                          EventNames[12],EventNames[13],EventNames[14]
-                          );
-    finally
-      SetLength(EventNames,0)
+    P := FEventBuffer;
+    P^ := EPB_version1;
+    Inc(P);
+    for i := 0 to FEvents.Count - 1 do
+    begin
+      S := Trim(FEvents[i]);
+      P^ := Length(S);
+      Inc(P);
+      Move(S[1],P^,Length(S));
+      Inc(P,Length(FEvents[i])+4);
     end;
   end;
+{  for i := 0 to FEventBufferLen - 1 do
+  write(Format('%x ', [FEventBuffer[i]]));
+   writeln;}
 end;
 
 procedure TFBEvents.CancelEvents(Force: boolean);
@@ -183,9 +266,94 @@ begin
     Handler(GetIEvents);
 end;
 
+(*
+  getEventCounts derived from
+
+void API_ROUTINE isc_event_counts(ULONG* result_vector,
+								  SSHORT buffer_length,
+								  UCHAR* event_buffer,
+								  const UCHAR* result_buffer)
+{
+/**************************************
+ *
+ *	g d s _ $ e v e n t _ c o u n t s
+ *
+ **************************************
+ *
+ * Functional description
+ *	Get the delta between two events in an event
+ *	parameter block.  Used to update gds_events
+ *	for GPRE support of events.
+ *
+ **************************************/
+	ULONG* vec = result_vector;
+	const UCHAR* p = event_buffer;
+	const UCHAR* q = result_buffer;
+	USHORT length = buffer_length;
+	const UCHAR* const end = p + length;
+
+	// analyze the event blocks, getting the delta for each event
+
+	p++;
+	q++;
+	while (p < end)
+	{
+		// skip over the event name
+
+		const USHORT i = (USHORT)* p++;
+		p += i;
+		q += i + 1;
+
+		// get the change in count
+
+		const ULONG initial_count = gds__vax_integer(p, sizeof(SLONG));
+		p += sizeof(SLONG);
+		const ULONG new_count = gds__vax_integer(q, sizeof(SLONG));
+		q += sizeof(SLONG);
+		*vec++ = new_count - initial_count;
+	}
+
+	// copy over the result to the initial block to prepare
+	// for the next call to gds__event_wait
+
+	memcpy(event_buffer, result_buffer, length);
+}
+*)
+
 procedure TFBEvents.ProcessEventCounts;
-var P: PISC_LONG;
-    EventCountList: array[0..19] of ISC_LONG;
+
+  procedure getEventCounts(var ResultVector: array of Long; BufLen: integer; EventBuffer, ResultBuffer: PByte);
+  var i: integer;
+      P, Q: PByte;
+      initial_count: Long;
+      new_count: Long;
+      bufend: PByte;
+      len: byte;
+  begin
+    P := EventBuffer;
+    Q := ResultBuffer;
+    bufend := P + BufLen;
+    i := 0;
+    Inc(P); {skip past version byte}
+    Inc(Q);
+    while P < BufEnd do
+    with FFirebirdClientAPI do
+    begin
+      {skip over the event name}
+      len := P^;
+      P := P + len + 1;
+      Q := Q + len + 1; {event name length in P^}
+      initial_count := DecodeInteger(P,sizeof(Long));
+      Inc(P,sizeof(Long));
+      new_count := DecodeInteger(Q,sizeof(Long));
+      Inc(Q,sizeof(Long));
+      ResultVector[i] := new_count - initial_count;
+      Inc(i);
+    end;
+    Move(ResultBuffer^,EventBuffer^,BufLen);
+  end;
+
+var EventCountList: array[0..19] of ISC_LONG;
     i: integer;
     j: integer;
 begin
@@ -194,10 +362,9 @@ begin
 
   FillChar(EventCountList,sizeof(EventCountList),0);
 
-  with FFirebirdClientAPI do
-     isc_event_counts( @EventCountList, FEventBufferLen, FEventBuffer, FResultBuffer);
+  getEventCounts(EventCountList, FEventBufferLen, FEventBuffer, FResultBuffer);
+
   j := 0;
-  P := @EventCountList;
   for i := 0 to FEvents.Count - 1 do
   begin
     if EventCountList[i] <> 0 then
@@ -205,8 +372,7 @@ begin
       Inc(j);
       SetLength(FEventCounts,j);
       FEventCounts[j-1].EventName := FEvents[i];
-      FEventCounts[j-1].Count := P^;
-      Inc(P);
+      FEventCounts[j-1].Count := EventCountList[i];
 //      writeln('Event: ',FEventCounts[j-1].EventName,' Count = ',FEventCounts[j-1].Count);
     end;
   end;
@@ -234,9 +400,9 @@ begin
   with FFirebirdClientAPI do
   begin
     if FEventBuffer <> nil then
-      isc_free( FEventBuffer);
+      FreeMem( FEventBuffer);
     if FResultBuffer <> nil then
-      isc_free( FResultBuffer);
+      FreeMem( FResultBuffer);
   end;
   inherited Destroy;
 end;
