@@ -41,6 +41,10 @@ FBINTF Change Log  version          (1.3-3 Build 12935) Mon, 06 Dec 2021 23:17:1
 9. Ensure Exception message consistency between legacy and new Firebird API. SQL and IB
    messages were swapped around.
 
+10. Internal tidyup. Native code now used for decoding integers and the events
+    buffer. Avoids dependencies on fbclient functions isc_portable_integer,
+    isc_event_block and isc_event_counts.
+
 FBINTF Change Log  version          (1.3-2 Build 12889) Sun, 24 Oct 2021 13:49:28 +0100
 
 1. TFBClientAPI.GetProcAddr. Add check for nil reference.
